# pdf-to-excel

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  app.spec  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: python-app.yml
src/mymodule/: __init__.py
src/myproject/: __init__.py
src/pdf2excel/: regexes.py  tasks.py
tests/: conftest.py
tests/mymodule_tests/: mymodule_test.py
tests/myproject_tests/: myproject_test.py
tests/pdf2excel_tests/: regexes_test.py  tasks_test.py
